--- a/snippet.html
+++ b/snippet.html
@@ -6,18 +6,15 @@
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
 		<script type="text/javascript" src="applet_js/processing.js"></script>
 		<script type="text/javascript">
-		function loadPoints(id) {
+		function loadXML(id, fn) {
 				var pjs = Processing.getInstanceById(id);
-				var xml = $.ajax({
-				   url: "data1.xml",
-				   async: false	
-				}).responseText;
+				var xml = $.ajax({url: fn, async: false }).responseText;
 				pjs.buildFromXML(xml); 
         }
 		</script>
 	</head>
 	<body>
-		<canvas id="mysketch5" data-processing-sources="applet_js/draw_points.pde"/></canvas>
-		<div id="controller"><button id="loadPoints" onclick="loadPoints('mysketch5')"/>Draw!</div>
+		<canvas id="1234" data-processing-sources="applet_js/flashcards.pde"/></canvas>
+		<div id="controller"><button id="loadXML" onclick="loadXML('1234', 'state_capitols.xml')"/>Draw!</div>
 	</body>
 </html>
