Improved doc and corrected spelling of capitol

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 	</head>
 	<body>
 		<canvas id="1234" data-processing-sources="applet_js/flashcards.pde"/></canvas>
-		<div id="controller"><button id="loadXML" onclick="loadXML('1234', 'state_capitols.xml')"/>Draw!</div>
+		<div id="controller"><button id="loadXML" onclick="loadXML('1234', 'state_capitals.xml')"/>Draw!</div>
 	</body>
 </html>
